--- a/candidate.html
+++ b/candidate.html
@@ -4,9 +4,6 @@ using System.Linq;
 using System.Text;
 using System.Threading.Tasks;
 
-namespace ModelRectt
-{
-    public class Class1
-    {
-    }
+namespace Model
+{ 
 }
